Fix scrollbar on the doc header breadcrumb in mobile view

--- a/src/main/content/_assets/css/doc-header.css
+++ b/src/main/content/_assets/css/doc-header.css
@@ -194,12 +194,12 @@
     }
 
     #breadcrumb_row {
-        height: 36px;
+        height: auto; /* Accodomate longer breadcrumbs with multiple rows */
     }
 
     #breadcrumb_row .breadcrumb {
         overflow: auto;
-        white-space: nowrap;
+        /* white-space: nowrap; */
     }
 }
 
